# LVGL_7_PC_SIMULATOR

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/pc_lvgl/lv_drivers/: CMakeLists.txt  read_c_files.py
libs/pc_lvgl/lvgl/: CMakeLists.txt  lv_conf.h
libs/pc_lvgl/lvgl/lvgl/src/: read_c_files.py
libs/sdl2/: CMakeLists.txt
src/: CMakeLists.txt  demo.c  demo.h  main.c  masarat_logo.c  monitor.c  monitor.h  mouse.c  mouse.h
